--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# GOOGLE_CLIENT_ID=101798164035-lftoum51tf1e6am8h2tno1hh03k56gni.apps.googleusercontent.com
-# GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=344147803653-8ht6jiug5ud1e2l4t88v9neq9j1ms9it.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
