--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@ __pycache__/
 migrations/versions/__pycache__/
 migrations/README
 routes/__pycache__/
-static/uploads/*
-!static/uploads/.gitkeep
+static/uploads/
 instance/homestay.db
