Update .gitignore to exclude database files
- Added *.sqlite and *.sqlite3 patterns
- Added specific database file names (homestay.db, app.db, etc.)
- Removed instance/homestay.db from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,14 @@ migrations/versions/__pycache__/
 migrations/README
 instance/
 *.db
+*.sqlite
+*.sqlite3
+
+# Database specific files
+homestay.db
+instance/homestay.db
+database.db
+
 
 # Cache
 .cache/
