--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,4 +1,4 @@
-# A generic, single database configuration.
+py# A generic, single database configuration.
 
 [alembic]
 # template used to generate migration files
