change to PostgresDB

--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@ SMTP_PORT=587
 SMTP_USERNAME=homivn.bookinghourly@gmail.com
 SMTP_PASSWORD=oqwhmymbtgeautxb
 FROM_EMAIL=homivn.bookinghourly@gmail.com
+
+# PostgreSQL database configuration
+DATABASE_URL=postgresql://postgres:timnolun2004@localhost:5432/homestay
