--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ SMTP_PASSWORD=oqwhmymbtgeautxb
 FROM_EMAIL=homivn.bookinghourly@gmail.com
 
 # PostgreSQL database configuration
-DATABASE_URL=postgresql://postgres:timnolun2004@localhost:5432/homestay
+# DATABASE_URL=postgresql://postgres:timnolun2004@localhost:5432/homestay
